Implement Frontier Apprentice
Add another route and custom content.
Pass data to an ejs template.
Create a simple CRUD capable list using Angular.
Create and use a custom layout.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
       <p>
         <%- t('welcome_message')%> <img src="<%= img('icon/arrow_left_white_11x11.png') %>" alt="">
       </p>
+      <p>This is my Frontier stack portfolio. Check out <a href="angular">angular</a> stuff.</p>
 
-      <a href="sample" class="btn btn-water"><%- t('sample_link')%></a>
     </section>
   </div>
 </div>
